--- a/.github/workflows/auto-merge.yaml
+++ b/.github/workflows/auto-merge.yaml
@@ -42,6 +42,6 @@ jobs:
           MERGE_LABELS: "merge"
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: delete branch
-        uses: SvanBoxel/delete-merged-branch@v1.4.3
+        uses: SvanBoxel/delete-merged-branch@1.4.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
