--- a/.github/workflows/auto-review-request.yaml
+++ b/.github/workflows/auto-review-request.yaml
@@ -8,11 +8,7 @@ jobs:
   auto-request-review:
     name: Auto Request Review
     runs-on: ubuntu-latest
-    permissions: 
-      checks: read
-      contents: write
-      actions: write
-      pull-requests: write
+    permissions: write-all
     steps:
       - name: Request review based on files changes and/or groups the author belongs to
         uses: necojackarc/auto-request-review@v0.12.0
