try another auto request

--- a/.github/workflows/auto-review-request.yaml
+++ b/.github/workflows/auto-review-request.yaml
@@ -4,20 +4,28 @@ on:
   pull_request:
     types: [opened, ready_for_review, reopened]
 
+# jobs:
+#   auto-request-review:
+#     name: Auto Request Review
+#     runs-on: ubuntu-latest
+#     permissions: write-all
+#     steps:
+#       - name: Request review based on files changes and/or groups the author belongs to
+#         uses: necojackarc/auto-request-review@v0.12.0
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           config: .github/reviewers.yaml # Config file location override
+#           # Look for config locally during run instead of in repo.
+#           # For instance, if you'd like to use a config file stored in external storage,
+#           # you can fetch it before you run this action, then let this action pick it up with `use_local: true`.
+#           # This defaults to false if not specified.
+#           # See https://github.com/necojackarc/auto-request-review/issues/76 for more details.
+#           use_local: false
+
 jobs:
-  auto-request-review:
-    name: Auto Request Review
+  add-reviews:
     runs-on: ubuntu-latest
-    permissions: write-all
     steps:
-      - name: Request review based on files changes and/or groups the author belongs to
-        uses: necojackarc/auto-request-review@v0.12.0
+      - uses: kentaro-m/auto-assign-action@v1.2.5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          config: .github/reviewers.yaml # Config file location override
-          # Look for config locally during run instead of in repo.
-          # For instance, if you'd like to use a config file stored in external storage,
-          # you can fetch it before you run this action, then let this action pick it up with `use_local: true`.
-          # This defaults to false if not specified.
-          # See https://github.com/necojackarc/auto-request-review/issues/76 for more details.
-          use_local: false
+          configuration-path: '.github/reviewers2.yaml' # Only needed if you use something other than .github/auto_assign.yml
