--- a/.github/workflows/auto-review-request.yaml
+++ b/.github/workflows/auto-review-request.yaml
@@ -25,6 +25,7 @@ on:
 jobs:
   add-reviews:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - uses: kentaro-m/auto-assign-action@v1.2.5
         with:
