--- a/.github/workflows/auto-merge.yaml
+++ b/.github/workflows/auto-merge.yaml
@@ -1,4 +1,4 @@
-name: Merge plugin-only PRs
+name: Auto Merge
 
 on:
   pull_request:
@@ -19,11 +19,6 @@ on:
       pull-request:
         description: Pull Request Number
         required: false
-
-# permissions:
-#   checks: read
-#   contents: write
-#   actions: write
 
 jobs:
   auto-merge:
